.k8s/deployment-manifests/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: high-steak-api-svc
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: high-steak-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
